// api/proto/user.proto
syntax = "proto3";

package user;

option go_package = "goclean/api/proto/user";

message User {
  uint64 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string address = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
  string address = 4;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  uint64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}